libs/preprocessor/tests/errors/pe25_exec/source.hpp
class MyClass {
    value = __EXEC(call something);
};
